# TecelaSQL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UML.drawio  main.cpp
CacheManger/: CacheManager.cpp  CacheManager.h
HashTable/: HashTable.h  Tests.cpp
QueryProvider/: QueryProvider.cpp  QueryProvider.h  Tests.cpp
Server/: Server.cpp  Server.h  test.cpp
SocketHandler/: SocketHandler.cpp  SocketHandler.h
benchmark/: Benchmark.cpp  Benchmark.h  CMakeLists.txt
client/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  codeErrors.h  exceptions.h  utils.h
src/Application/: Application.cpp  Application.h
src/CacheManager/: CacheManager.cpp  CacheManager.h
src/Client/: Client.cpp  Client.h
src/Command/: Command.cpp  Command.h
src/Command/AddCommand/: AddCommand.cpp  AddCommand.h
src/Command/DecrCommand/: DecrCommand.cpp  DecrCommand.h
src/Command/DeleteCommand/: DeleteCommand.cpp  DeleteCommand.h
src/Command/DisconnectCommand/: DisconnetCommand.cpp  DisconnetCommand.h
src/Command/FlushAllCommand/: FlushAllCommand.cpp  FlushAllCommand.h
src/Command/GetCommand/: GetCommand.cpp  GetCommand.h
src/Command/GetTTLCommand/: GetTTLCommand.cpp  GetTTLCommand.h
src/Command/IncrCommand/: IncrCommand.cpp  IncrCommand.h
src/Command/SetCommand/: SetCommand.cpp  SetCommand.h
src/Command/TouchCommand/: TouchCommand.cpp  TouchCommand.h
src/HashTable/: HashNode.h  HashTable.cpp  HashTable.h
src/HashTable/test/: CMakeLists.txt  testing.cpp
src/Query/: Query.cpp  Query.h
src/Query/test/: testing.cpp
src/Server/: Server.cpp  Server.h
src/Socket/: ClientConnection.cpp  ClientConnection.h  Socket.cpp  Socket.h
test/: CMakeLists.txt  main.cpp
test/HashTableTests/: testing.cpp
test/QueryTests/: testing.cpp
